@@ -1,3 +1,8 @@
+Mon May 13 16:53:45 2002  Jonathan Blandford  <jrb@redhat.com>
+
+	* gnome-mouse-properties.c (main): uncomment accidentally
+	commented lines.  Also, fixed text, #76413
+
 2002-05-13  Jody Goldberg <jody@gnome.org>
 
 	* gnome-mouse-properties.glade : Remove separator.
